kubernetes/examples/0.2.0-DEV/gke.minienv.com/deployment-web.yml
apiVersion: extensions/v1beta1
kind: Deployment 
metadata:
  name: minienv-web-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: minienv-web
    spec:
      containers:
        - name: minienv-web
          image: localhost:5000/minienv/minienv-web:0.2.0-DEV
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
