kubernetes/examples/0.2.0-DEV/gke.minienv.com/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: minienv-api-service
spec:
  selector:
    app: minienv-api
  ports:
    - protocol: TCP
      port: 80
      name: "web"
  type: NodePort
