kubernetes/examples/0.2.0-DEV/gke.minienv.com/service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: minienv-redis-service
spec:
  selector:
    app: minienv-redis
  ports:
    - protocol: TCP
      port: 6379
      name: "redis"
      targetPort: 6379
  type: ClusterIP
