kubernetes/examples/0.2.0-DEV/gke.minienv.com/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minienv-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gke.minienv.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: minienv-web-service
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: minienv-api-service
          servicePort: 80
      - path: /probot/*
        backend:
          serviceName: minienv-probot-service
          servicePort: 80
  - host: "*.gke.minienv.com"
    http:
      paths:
      - path: /*
        backend:
          serviceName: minienv-env-proxy-service
          servicePort: 80
  tls:
  - secretName: minienv-prod-tls-secret
    hosts:
    - gke.minienv.com
    - "*.gke.minienv.com"
#  tls:
#  - secretName: minienv-standard-prod-tls-secret
#    hosts:
#    - gke.minienv.com
#  - secretName: minienv-wildcard-prod-tls-secret
#    hosts:
#    - "*.gke.minienv.com"
